Text and design
Updated language, text, color, favicon, logo, fonts

--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -14,6 +14,7 @@ html, body {
 
 body {
   padding-top: 70px;
+  background-color: #F4F4F4;
 }
 
 #wrap {
@@ -47,6 +48,7 @@ body {
   background-repeat: no-repeat;
   background-size: 40px;
   background-position: left center;
+  font-size: 22px;
   margin-left: 15px;
   height: 45px;
 }
@@ -129,7 +131,7 @@ body {
 
 // Custom Stylez
 body {
-  font-family: 'Capriola', sans-serif;
+  font-family: 'Archer', sans-serif;
   color: #999999;
 }
 
@@ -142,8 +144,10 @@ body {
 
 .notes li {
 	color: white;
-	font-size: 1.5em;
-	background-color: #4593e3;
+	font-size: 1.8em;
+  font-family: proxima nova, sans;
+  font-weight: 600;
+	background-color: #E73F3F;
 	list-style-type: none;
 	display: inline-block;
 	margin: 0 10px 25px;
@@ -153,7 +157,7 @@ body {
 	text-transform: uppercase;
 	position: relative;
 	border-radius: 4px;
-	border: 2px solid #6aa9e9;
+	border: 2px solid #F57676;
 	vertical-align: top;
     .note-twitter-handle {
       float:right;
@@ -175,7 +179,8 @@ body {
 }
 
 .navbar-default {
-	background-color: #7fdbff;
+	background-color: #fff;
+  box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.05);
 }
 
 .navbar-nav li a {
@@ -185,4 +190,25 @@ body {
 .navbar-brand {
 	height: 60px;
 	line-height: 33px;
+  font-weight: bold;
+  padding-left: 48px;
+}
+
+.navbar-default .navbar-brand {
+  color: #333;
+}
+
+h1 {
+    color: #333333;
+    font-family: archer, sans;
+    font-size: 46px;
+    font-weight: bold;
+}
+
+a {
+  color: #E73F3F;
+}
+
+a:hover {
+  color: #F57676;
 }
