--- a/views/home.jade
+++ b/views/home.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1 Yo Me Quedo en Puerto Rico porque...
+  h1 I love San Antonio because...
   .new-content-flash
   ul.notes
 //    for note in notes
