--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,7 +6,7 @@ html(lang='es')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     meta(name='description', content='')
     meta(name='author', content='')
-    title #{title} Yo Me Quedo en Puerto Rico
+    title #{title} We love San Antonio
     != css('styles')
     != js('application')
     script(src='/socket.io/socket.io.js?v=#{cacheBuster}')
