--- a/views/partials/footer.jade
+++ b/views/partials/footer.jade
@@ -2,11 +2,11 @@
   .container.text-center
     div
       | © 2014
-      a(href='http://coquicoders.org' target='_blank')  CoquiCoders.
+      a(href='http://techzans.com' target='_blank')  Techzans.
     div
       | Code licensed under
       a(href='http://opensource.org/licenses/mit-license.html')  MIT License
     div
-      a(href='https://github.com/CoquiCoders/ilovepr') GitHub Project
+      a(href='https://github.com/Techzans/ilovesanantonio') GitHub Project
       |  ·
-      a(href='https://github.com/CoquiCoders/ilovepr/issues')  Issues
+      a(href='https://github.com/Techzans/ilovesanantonio/issues')  Issues
