--- a/views/new_note.jade
+++ b/views/new_note.jade
@@ -3,11 +3,11 @@ extends layout
 block content
   form.form-horizontal(id='new-note-form-2', method='POST')
     input(type='hidden', name='_csrf', value=token)
-    legend Nueva Nota
+    legend New Note
     .form-group
-      .col-sm-3.control-label(for='noteText') Nota
+      .col-sm-3.control-label(for='noteText') Note
       .col-sm-7
-        textarea.form-control(type='text', name='noteText', id='note-text', placeholder='Texto', autofocus)
+        textarea.form-control(type='text', name='noteText', id='note-text', placeholder='I love San Antonio because...', autofocus)
     .form-group
       label.col-sm-3.control-label(for='twitterHandle') @
       .col-sm-7
@@ -16,4 +16,4 @@ block content
       .col-sm-offset-3.col-sm-7
         button.btn.btn-success(type='submit')
           i.fa.fa-check
-          | Enviar
+          | Post
