--- a/views/partials/navigation.jade
+++ b/views/partials/navigation.jade
@@ -6,10 +6,10 @@
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      a.navbar-brand(href='/') Puerto Rico
+      a.navbar-brand(href='/') I love San Antonio
     .collapse.navbar-collapse
       ul.nav.navbar-nav
-        li(class=title=='Nueva Nota'?'active':undefined)
+        li(class=title=='New Note'?'active':undefined)
           a(href='/note/new') Nueva Nota
         //li(class=title=='API Browser'?'active':undefined)
         //  a(href='/api') API Browser
