Change tweet bird and twitter handle to dark red

--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -166,7 +166,7 @@ body {
 
 .notes li {
     a, a:hover, a:visited  {
-      color: white;
+      color: #802121;
       text-decoration: underline;
       font-size: 0.7em;
       text-transform: none;
