Add typekit JS and change font

--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -161,7 +161,7 @@ body {
 .notes li {
 	color: white;
 	font-size: 1.8em;
-  font-family: proxima nova, sans;
+  font-family: proxima-nova, sans;
   font-weight: 600;
 	background-color: #E73F3F;
 	list-style-type: none;
