--- a/views/layout.jade
+++ b/views/layout.jade
@@ -17,6 +17,9 @@ html(lang='es')
         return window.twttr || (t = { _e: [], ready: function(f){ t._e.push(f) } });
        }(document, "script", "twitter-wjs"));*/
     != js('application')
+    script(type='text/javascript', src='//use.typekit.net/gvp7wrm.js')
+  script(type='text/javascript')
+      try{Typekit.load();}catch(e){}
     // TODO -- figure out how stuff gets added to JADE like this
   body
     #wrap
