Remove nav toggle and reduce h1 font for mobile

--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -213,6 +213,10 @@ body {
   color: #333;
 }
 
+.navbar-default .navbar-toggle {
+    display: none;
+}
+
 h1 {
     color: #333333;
     font-family: Archer-Bold, sans;
@@ -228,3 +232,8 @@ a:hover {
 }
 
 .tweet-link {padding-right: 6px;}
+
+/* Smartphones (portrait and landscape) ----------- */
+@media only screen and (max-width : 480px) {
+h1 {font-size: 26px;}
+}
