--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -231,7 +231,13 @@ a:hover {
   color: #F57676;
 }
 
-.tweet-link {padding-right: 6px;}
+.tweet-link {
+  padding-right: 6px;
+}
+
+div.note-text {
+  word-wrap: break-word;
+}
 
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen and (max-width : 480px) {
