updates for Montreal

--- a/views/home.jade
+++ b/views/home.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1 I love San Antonio because...
+  h1 I love Montréal because...
   #new-note
   form.form-horizontal(id='new-note-form', method='POST')
     input(type='hidden', name='_csrf', value=token)
