--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,7 +6,7 @@ html
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     meta(name='description', content='')
     meta(name='author', content='')
-    title #{title} We love San Antonio
+    title #{title} We love Montréal
     != css('styles')
     script(src='//platform.twitter.com/widgets.js')
     script.
