--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -60,7 +60,7 @@ body {
 }
 
 .navbar-brand {
-  background-image: url(../img/logo_heart.png);
+  background-image: url(../img/logo-web.png);
   background-repeat: no-repeat;
   background-size: 40px;
   background-position: left center;
