--- a/views/partials/navigation.jade
+++ b/views/partials/navigation.jade
@@ -6,7 +6,7 @@
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      a.navbar-brand(href='/') I love San Antonio
+      a.navbar-brand(href='/') I love Montréal
     .collapse.navbar-collapse
       ul.nav.navbar-nav
         li(class=title=='New Note'?'active':undefined)
