replacing TypeKit for Google Fonts (for license and speed)

--- a/views/partials/footer.jade
+++ b/views/partials/footer.jade
@@ -7,6 +7,6 @@
       | Code licensed under
       a(href='http://opensource.org/licenses/mit-license.html')  MIT License
     div
-      a(href='https://github.com/Techzans/ilovesanantonio') GitHub Project
+      a(href='https://github.com/mvonthron/ilovemtl') GitHub Project
       |  ·
-      a(href='https://github.com/Techzans/ilovesanantonio/issues')  Issues
+      a(href='https://github.com/mvonthron/ilovemtl/issues')  Issues
