--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -3,22 +3,6 @@
 @import "lib/bootstrap/bootstrap";
 @import "lib/isotope.css";
 @import "themes/default";
-@font-face {
-  font-family: 'Archer-Bold';
-  src: url('/css/webfont/Archer-Bold.eot?') format('eot'), 
-       url('/css/webfont/Archer-Bold.otf')  format('opentype'),
-       url('/css/webfont/Archer-Bold.woff') format('woff'), 
-       url('/css/webfont/Archer-Bold.ttf')  format('truetype'),
-       url('/css/webfont/Archer-Bold.svg#Archer-Bold') format('svg');
-}
-@font-face {
-  font-family: 'Archer-Medium';
-  src: url('/css/webfont/Archer-Medium.eot?') format('eot'), 
-       url('/css/webfont/Archer-Medium.otf')  format('opentype'),
-       url('/css/webfont/Archer-Medium.woff') format('woff'), 
-       url('/css/webfont/Archer-Medium.ttf')  format('truetype'),
-       url('/css/webfont/Archer-Medium.svg#Archer-Medium') format('svg');
-}
 
 
 // Scaffolding
@@ -64,7 +48,7 @@ body {
   background-repeat: no-repeat;
   background-size: 40px;
   background-position: left center;
-  font-size: 22px;
+  font-size: 18px;
   margin-left: 15px;
   height: 45px;
 }
@@ -147,7 +131,7 @@ body {
 
 // Custom Stylez
 body {
-  font-family: 'Archer-Medium', sans-serif;
+  font-family: 'Arvo', sans-serif;
   color: #999999;
 }
 
@@ -219,7 +203,7 @@ body {
 
 h1 {
     color: #333333;
-    font-family: Archer-Bold, sans;
+    font-family: Arvo, sans;
     font-size: 46px;
 }
 
