--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,6 +7,7 @@ html
     meta(name='description', content='')
     meta(name='author', content='')
     title #{title} We love Montréal
+    link(rel='stylesheet', type='text/css', href='http://fonts.googleapis.com/css?family=Arvo')
     != css('styles')
     script(src='//platform.twitter.com/widgets.js')
     script.
@@ -17,9 +18,6 @@ html
         return window.twttr || (t = { _e: [], ready: function(f){ t._e.push(f) } });
        }(document, "script", "twitter-wjs"));*/
     != js('application')
-    script(src='//use.typekit.net/gvp7wrm.js')
-    script.
-      try{Typekit.load();}catch(e){}
   body
     #wrap
       include partials/navigation
