--- a/views/partials/footer.jade
+++ b/views/partials/footer.jade
@@ -1,12 +1,10 @@
 #footer
   .container.text-center
     div
-      | © 2014
-      a(href='http://techzans.com' target='_blank')  Techzans.
-    div
       | Code licensed under
       a(href='http://opensource.org/licenses/mit-license.html')  MIT License
-    div
+      |  · 
       a(href='https://github.com/mvonthron/ilovemtl') GitHub Project
-      |  ·
-      a(href='https://github.com/mvonthron/ilovemtl/issues')  Issues
+    div
+      | Inspired by 
+      a(href='http://www.ilovesanantonio.org/') I love San Antonio
