Montreal background image

--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -1,7 +1,7 @@
 @import (less) "lib/animate.css";
 @import "lib/bootstrap/bootstrap";
 @import "lib/isotope.css";
-@import "themes/default";
+@import "themes/montreal";
 
 
 // Scaffolding
@@ -177,7 +177,7 @@ body {
 }
 
 .navbar-default {
-	background-color: #fff;
+	background-color: #2C2F64;
   box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.05);
 }
 
@@ -193,7 +193,7 @@ body {
 }
 
 .navbar-default .navbar-brand {
-  color: #333;
+  color: #F4F4F4;
 }
 
 .navbar-default .navbar-toggle {
