--- a/views/layout.jade
+++ b/views/layout.jade
@@ -16,6 +16,7 @@ html
     #wrap
       include partials/navigation
       .container
+        include partials/montrealbg
         //include partials/new_note
         include partials/flash
         block content
