--- a/public/css/themes/montreal.less
+++ b/public/css/themes/montreal.less
@@ -80,6 +80,7 @@
   transition: color 0.3s;
 }
 
+
 // Footer
 // -------------------------
 
@@ -94,4 +95,5 @@
     left: 0px;
     height: 300px;
     min-width: 100%;
+    z-index: -1;
 }
