--- a/views/partials/navigation.jade
+++ b/views/partials/navigation.jade
@@ -1,11 +1,6 @@
-.navbar.navbar-default.navbar-fixed-top
+.navbar.navbar-fixed-top
   .container
     .navbar-header
-      button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
-        span.sr-only Toggle navigation
-        span.icon-bar
-        span.icon-bar
-        span.icon-bar
       a.navbar-brand(href='/') I love Montréal
     .collapse.navbar-collapse
       ul.nav.navbar-nav
