--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -173,11 +173,12 @@ body {
 }
 
 .navbar {
-	min-height: 60px;
+	min-height: 40px;
+    background-color: rgba(255, 255, 255, 0.8);
 }
 
 .navbar-default {
-	background-color: #2C2F64;
+  background-color: #2C2F64;
   box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.05);
 }
 
@@ -186,10 +187,11 @@ body {
 }
 
 .navbar-brand {
-	height: 60px;
-	line-height: 33px;
+  height: 60px;
+  line-height: 33px;
   font-weight: bold;
   padding-left: 48px;
+  padding-top: 5px;;
 }
 
 .navbar-default .navbar-brand {
@@ -200,10 +202,16 @@ body {
     display: none;
 }
 
+.navbar-header {
+    height: 40px;
+}
+
 h1 {
     color: #333333;
     font-family: Arvo, sans;
-    font-size: 46px;
+    font-size: 32px;
+    margin-top: 0px;
+    margin-bottom: 30px;
 }
 
 a {
