added visitor to model + theming

--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -43,7 +43,7 @@ body {
 }
 
 .navbar-brand {
-  background-image: url(../img/logo-web.png);
+  background-image: url(../img/logo-web-bottom-circled.png);
   background-repeat: no-repeat;
   background-size: 40px;
   background-position: left center;
@@ -174,7 +174,7 @@ body {
 
 .navbar {
 	min-height: 40px;
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(255, 255, 255, 0.5);
 }
 
 .navbar-default {
