--- a/public/css/themes/montreal.less
+++ b/public/css/themes/montreal.less
@@ -97,3 +97,10 @@
     min-width: 100%;
     z-index: -1;
 }
+
+.checkbox label {
+    vertical-align: middle;
+} 
+.checkbox span {
+    vertical-align: middle;
+}
