--- a/views/home.jade
+++ b/views/home.jade
@@ -13,10 +13,15 @@ block content
       label.col-sm-3.control-label(for='twitterHandle') @
       .col-sm-7
         input.form-control(type='text', name='twitterHandle', id='twitterHandle', placeholder='Twitter', autofocus)
-     .form-group
-      .col-sm-offset-3.col-sm-7
+    .form-group
+      label.col-sm-3.control-label(for='twitterHandle') 
+      .col-sm-3.checkbox
+        input(type='checkbox', name='isVisitor', id='isVisitor', placeholder='visitor', autofocus)
+        <span>I am a visitor</span>
+      .col-sm-3.pull-right
         button.btn.btn-success(type='submit')
           i.fa.fa-check
-              | Send 
+              | Send
+
   ul.notes
 
