--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -135,30 +135,42 @@ body {
 }
 
 .notes {
-	margin-top: 30px;
-	padding-left: none;
-	padding-right: none;
-	position: relative;
+    margin-top: 30px;
+    padding-left: none;
+    padding-right: none;
+    position: relative;
 }
 
 .notes li {
-	color: white;
-	font-size: 1.8em;
-  font-family: proxima-nova, sans;
-  font-weight: 600;
-	background-color: #E73F3F;
-	list-style-type: none;
-	display: inline-block;
-	margin: 0 10px 25px;
-	letter-spacing: 2px;
-	padding: 25px;
-	text-transform: uppercase;
-	position: relative;
-	border-radius: 4px;
-	border: 2px solid #F57676;
-	vertical-align: top;
+    color: white;
+    font-size: 1.8em;
+    font-family: proxima-nova, sans;
+    font-weight: 600;
+    background-color: #E73F3F;
+    list-style-type: none;
+    display: inline-block;
+    margin: 0 10px 25px;
+    letter-spacing: 2px;
+    padding: 20px;
+    text-transform: uppercase;
+    position: relative;
+    border: 1px solid #fff;
+    vertical-align: top;
+    box-shadow: 0px 0px 5px #aaa;
     .note-twitter-handle {
       float:right;
+    }
+    .note-isvisitor {
+        font-size: 50%;
+        float:left;
+        background-color: #fff;
+        color: #999;
+        margin-left: -20px;
+        position: absolute;
+        bottom: -0px;
+        border-top-right-radius: 10px;
+        padding-top: 3px;
+        padding-bottom: 0px;
     }
 }
 
@@ -173,7 +185,7 @@ body {
 }
 
 .navbar {
-	min-height: 40px;
+    min-height: 40px;
     background-color: rgba(255, 255, 255, 0.5);
 }
 
@@ -183,7 +195,7 @@ body {
 }
 
 .navbar-nav li a {
-	padding-top: 19.5px;
+    padding-top: 19.5px;
 }
 
 .navbar-brand {
