--- a/public/css/themes/montreal.less
+++ b/public/css/themes/montreal.less
@@ -36,6 +36,10 @@
   box-shadow: none;
 }
 
+div.pull-right button.btn-success {
+  margin-left: -16px;
+}
+
 // Forms
 // -------------------------
 
@@ -98,9 +102,18 @@
     z-index: -1;
 }
 
+.control-label {
+  font-weight: normal;
+  color: #444;
+}
+label {
+  font-weight: normal;
+  color: #444;
+}
+
 .checkbox label {
     vertical-align: middle;
-} 
+}
 .checkbox span {
     vertical-align: middle;
 }
