--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -142,35 +142,20 @@ body {
 }
 
 .notes li {
-    color: white;
+    color: blue;
     font-size: 1.8em;
     font-family: proxima-nova, sans;
     font-weight: 600;
-    background-color: #E73F3F;
     list-style-type: none;
     display: inline-block;
-    margin: 0 10px 25px;
+    margin: 0 5px 25px;
     letter-spacing: 2px;
-    padding: 20px;
+    padding: 5px;
     text-transform: uppercase;
     position: relative;
-    border: 1px solid #fff;
     vertical-align: top;
-    box-shadow: 0px 0px 5px #aaa;
     .note-twitter-handle {
       float:right;
-    }
-    .note-isvisitor {
-        font-size: 50%;
-        float:left;
-        background-color: #fff;
-        color: #999;
-        margin-left: -20px;
-        position: absolute;
-        bottom: -0px;
-        border-top-right-radius: 10px;
-        padding-top: 3px;
-        padding-bottom: 0px;
     }
 }
 
@@ -182,6 +167,19 @@ body {
       font-size: 0.7em;
       text-transform: none;
     }
+}
+
+.note-isvisitor {
+    font-size: 50%;
+    float: left;
+    background-color: #ccc;
+    color: #FFF;
+    margin-left: -16px;
+    position: absolute;
+    bottom: 40px;
+    border-top-right-radius: 10px;
+    padding-top: 3px;
+    padding-bottom: 0px;
 }
 
 .navbar {
@@ -238,8 +236,12 @@ a:hover {
   padding-right: 6px;
 }
 
-div.note-text {
+div.note-main {
   word-wrap: break-word;
+  border: 1px solid #fff;
+  padding: 15px;
+  box-shadow: 0px 0px 5px #aaa;
+  background-color: white;
 }
 
 /* Smartphones (portrait and landscape) ----------- */
