--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -142,16 +142,16 @@ body {
 }
 
 .notes li {
-    color: blue;
+    color: #31B2CA;
     font-size: 1.8em;
-    font-family: proxima-nova, sans;
-    font-weight: 600;
+    font-family: 'Raleway', proxima-nova, sans;
+    font-weight: 500;
     list-style-type: none;
     display: inline-block;
     margin: 0 5px 25px;
     letter-spacing: 2px;
     padding: 5px;
-    text-transform: uppercase;
+//    text-transform: uppercase;
     position: relative;
     vertical-align: top;
     .note-twitter-handle {
@@ -162,7 +162,7 @@ body {
 
 .notes li {
     a, a:hover, a:visited  {
-      color: #802121;
+      color: #31B2CA;
       text-decoration: underline;
       font-size: 0.7em;
       text-transform: none;
@@ -172,7 +172,7 @@ body {
 .note-isvisitor {
     font-size: 50%;
     float: left;
-    background-color: #ccc;
+    background-color: #31B2CA;
     color: #FFF;
     margin-left: -16px;
     position: absolute;
@@ -238,10 +238,11 @@ a:hover {
 
 div.note-main {
   word-wrap: break-word;
-  border: 1px solid #fff;
+  border: 1px solid #31B2CA;
   padding: 15px;
   box-shadow: 0px 0px 5px #aaa;
   background-color: white;
+  color: #0C3036;
 }
 
 /* Smartphones (portrait and landscape) ----------- */
